--- a/style.css
+++ b/style.css
@@ -1,59 +1,143 @@
-/* komputer */
-img
+html, body 
 {
-	width: 100%;
-	height: 100%;
-	max-width: 100%;
-    max-height: 100%;
+    height: 100%;
+}
+
+.tab
+{
+    font-size: 3vw;
+    margin-top: 0.625%;
+    background-color: silver;
+    float: left;
+    width: 90%;
+    height: 97%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    overflow: auto;
+    padding-left: 5%;
+}
+
+.tabButton
+{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 1.5vw;
+    writing-mode: vertical-rl;
+    float: left;
+    width: 4%;
+    height: 20%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-top: 1%;
+}
+
+.jobAndEducationElement
+{
+    border-radius: 10px;
+    border: 5px solid gold;
+    width: 80%;
+    height: auto;
     margin: auto;
+    margin-top: 10px;
+    padding: 5px;
+    margin-bottom: 10px;
 }
 
-#game
+#tabButton1
 {
-	width: 33%;
-	margin-left: 33%;
-	margin-right: 33%;
+    top: 20%;
+    position: absolute;
+    background-color: rgb(128, 126, 118);
 }
 
-#image
+#tabButton2
 {
-	display: block;
-	margin-left: 33%;
-	margin-right: 33%;
-	color: green;
-	background-color: LightGray;
-	float: left;
-	width: 33%;
+    top: 43%;
+    position: absolute;
+    background-color: rgb(167, 164, 153);
 }
 
-#restartButton
+#tabButton3
 {
-	width: 80%;
-	height: 25px;
-	margin: 10%;
-	background-color: #7FFF00;
-	border: 3px solid #D2691E;
-	border-radius: 25px;
-	color: #D2691E;
+    top: 66%;
+    position: absolute;
+    background-color: rgb(199, 197, 189);
 }
 
-#restartButton:hover
+#tab1
 {
-	color: #7FFF00;
-	background-color: #D2691E;
+    background-color: rgb(128, 126, 118);
+    display: none;
 }
 
-#info
+#tab2
 {
-	height: 20px;
+    background-color: rgb(167, 164, 153);
+    display: none;
 }
 
-/* tablet */
-@media screen and (max-width: 800px){
-	#game
+#tab3
 {
-	width: 80%;
-	margin-left: 10%;
-	margin-right: 10%;
+    background-color: rgb(199, 197, 189);
+    display: none;
 }
+
+#allTabSpace
+{
+    border: 5px solid gold;
+    border-radius: 20px;
+    height: 80%;
+    background-color: white;
+}
+
+
+
+/*Scrollbar*/
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px gold; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: gold; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: goldenrod; 
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+  }
+
+  #toolbar
+{
+    height: 15%;
+    background-color: white;
+    border-top: 0px;
+    border-bottom: 5px solid gold;
+    border-left: 5px solid gold;
+    border-right: 5px solid gold;
+    border-radius:  0px 0px 20px 20px;
+    text-align: center;
+    font-size: 3vw;
+}
+
+img 
+{
+    margin-top: 10px;
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 50%;
 }
